# coordinat_viewer

./: CMakeLists.txt  CoordinateViewer.proto  imgui.ini  notes.txt  test_stub_main.cpp
include/: Application.h  BackgroundWorkManager.h  BasicBackgroundWorker.h  CallPoint.h  CallPointsManager.h  ColoredDrawable.h  CoordinateViewer.h  GrpcServer.h  ImGuiImpl.h  Renderer.h  TexturedDrawable.h
resources/: Point.fbx
src/: Application.cpp  BackgroundWorkManager.cpp  CallPoint.cpp  CallPointsManager.cpp  ColoredDrawable.cpp  CoordinateViewer.cpp  GrpcServer.cpp  ImGuiImpl.cpp  Renderer.cpp  TexturedDrawable.cpp  main.cpp
